tests/invalid/type/manual_ex104.pts
function main() : void {
    const int y = 1;
    y = 2;
}
